src/css/global.css
/* ... */
button:hover{       
    outline: 0;
    /* box-shadow: -14px -7px 20px 0px rgb(22, 21, 21) inset, 10px 4px 20px 0px #1f1f1f;; */  
}

button:active {
   
    transform: translateY(3px);
  }

.refresh-button{
    padding: .7em .8em;
}

.sort-button{
    padding-top: .95em;
    padding-bottom: .95em;
}

.css-1p823my-MuiListItem-root{
    padding: 0 5px 0 5px;
    margin: 9px 0 9px 0;
}

/*******************SLIDER******************/

.slider-container{
    height: 80%;
    display: flex;
    border-top-style: groove;
    border-top-color: #919ca129;
    padding: .5em 0;
}

.slider{
    color: white;
    margin-top: .5em;
    flex-grow: 1;
}

.slider-label{
    font-size: 20px;
    display: flex;
    color: #fd9170;
    text-align: center;
    flex-direction: column;
    writing-mode: vertical-lr;
    text-orientation: upright;
    letter-spacing: 15px;
    margin-left: 0.5em;
    width: 50%;
    padding-top: .5em;
}

.css-fk6q5t-MuiSlider-root{
    color: white;
    border-radius: 0;
}

.css-ada0pd-MuiSlider-track{
    width: 10px;
}

.css-qx5f9e-MuiSlider-rail{
    color: transparent;
    width: 10px;
}

.css-eg0mwd-MuiSlider-thumb{
    background-color: white;
}

.css-ofrcno-MuiGrid-root>.MuiGrid-item{
    color: white;
}

.css-xxsb21-MuiSlider-markLabel{
    color: white;
    left: 44px;
    font-size: 1rem;
}

.css-19l5h75-MuiSlider-markLabel{
    color: #fd9170;
    left: 44px;
    font-size: 1rem;
}

.css-1wdhkzz-MuiSlider-mark{
    color: #fd9170;
    width: 4px;
    height: 4px;
    border-radius: 50%;
}

/*********************Tubes********************/

.tube-wrap{
    display: flex;
}

.tubes { 
  margin-inline: auto; 
  display: flex; 
  flex-wrap: wrap; 
  gap: 2rem; 
  justify-content: center 
}

.tube {
    --width: 4rem;
    --skew: .5rem;
    --tube-color: #fff;
    --fill-color: black; 
    --anim-duration: 1s;
    width: var(--width);
    aspect-ratio: 1/4.5;
    margin-top: var(--skew);
    border-top-left-radius: 50% var(--skew);
    border-top-right-radius: 50% var(--skew);
    border-bottom-left-radius: 50% var(--skew);
    border-bottom-right-radius: 50% var(--skew);
    display: grid;
    grid-template-rows: max-content auto max-content;
    position: relative;
}

.tube::before{
    --blur: 4px;
    content: '';
    position: absolute;
    width: calc(100% + var(--width) * 0.25);
    z-index: -1;
    right: var(--blur);
    bottom: 0;
    height: calc(var(--skew) * 2);
    background: rgb(0 0 0 / .25);
    border-radius: inherit;
    filter: blur(var(--blur));
}

.cap-text{
    width: 100%;
    color: var(--fill-color);
    background-color: rgb(0 0 0 / .1);
    padding-top: calc(var(--skew) + var(--width) * .05);
    padding-bottom: calc(var(--width) * .1);
    display: grid;
    place-content: center;
    margin-top: calc(var(--skew) * -.5);
    border-bottom-left-radius: 50% var(--skew);
    border-bottom-right-radius: 50% var(--skew);
    --mask-image: radial-gradient( ellipse 100% calc(var(--skew) * 2) at center top, transparent calc(50% - 1px), black calc(50% + 1px));
    -webkit-mask-image: var(--mask-image);
    mask-image: var(--mask-image);
    font-size: x-large;
    font-style: normal;
}

.current-element {
    --fill-color: red; 
   
    animation-name: move;
    animation-duration: 5s;
}

.swap-container{
    z-index: 5;
   position: absolute;
   top: 80px;
   left: 55px;
   background-color: black;
   width: inherit;text-align: center;
}

.swap::before{
   font-size: xx-large;
   font-style: normal;
   content: "SWAP";
   color: white;
   
  
}


@keyframes move{
    100%{top: 20px}
}

.current-element-text::before{
    content: "arr[i]";  
    position: relative;
    top: 4px;
}

.next-element{
    --fill-color: blue;
    animation-name: move;
    animation-duration: 5s ;
}

.next-element-text::before{
    content: "arr[i + 1]"; 
    position: relative;
    top: 4px;
}

.cap{
    --cap-height: calc(var(--width) * .4);
    height: calc(var(--cap-height) + var(--skew));
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
    background-color: var(--tube-color);
    background-image: linear-gradient(to right, rgb(0 0 0 / .25), transparent 50%);
    position: relative;
    z-index: 2;
    color: var(--fill-color);
    display: grid;
    place-content: center;
    font-size: x-large;
    font-style: normal;
}


.cap::after{
    content: "";
    position: absolute;
    width: 100%;
    height: calc(var(--skew) * 2);
    background-color: var(--tube-color);
    background-image: linear-gradient(to left, rgb(0 0 0 / .30), transparent);
    border-radius: 50%;
    top: calc(var(--skew) * -1);
}

.base{
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
    background-color: var(--tube-color);
    background-image: linear-gradient(to right, rgb(0 0 0 / .25), transparent 50%);
    position: relative;
    display: grid;
    justify-items: center;
    text-align: center;
    overflow: hidden;
}

.text{
    width: 100%;
    color: var(--fill-color);
    background-color: rgb(0 0 0 / .1);
    padding-top: calc(var(--skew) + var(--width) * .1);
    padding-bottom: calc(var(--width) * .1);
    display: grid;
    place-content: center;
    margin-top: calc(var(--skew) * -.5);
    border-bottom-left-radius: 50% var(--skew);
    border-bottom-right-radius: 50% var(--skew);
    --mask-image: radial-gradient( ellipse 100% calc(var(--skew) * 2) at center top, transparent calc(50% - 1px), black calc(50% + 1px));
    -webkit-mask-image: var(--mask-image);
    mask-image: var(--mask-image);
    line-height: 1;
    font-size: calc(var(--width) * .4);
    position: relative;
}
/* ... */

